--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -6,6 +6,19 @@ html, body {
 
 .page {
 	padding-top: 70px;
+
+	@include respond-smaller-than($md) {
+		padding-bottom: 140px;
+		position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    overflow: auto;
+	}
+
+	@include respond($md) {
+		padding-bottom: 0;
+	}
 }
 
 .fade-page-in {
